...
                            <constraint firstItem="RjC-4Q-oNg" firstAttribute="trailing" secondItem="H20-G3-bFl" secondAttribute="trailing" constant="22" id="xxQ-GB-QJ3"/>
                            <constraint firstItem="pFu-5r-3HE" firstAttribute="top" secondItem="H20-G3-bFl" secondAttribute="bottom" constant="12" id="yn7-Ua-8GM"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="categoryCollection" destination="pFu-5r-3HE" id="La0-NA-uLn"/>
                        <outlet property="txtFldSearch" destination="shw-OA-wEu" id="lQJ-XW-qxY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="j11-pi-35p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-11" y="648"/>
        </scene>
...
                                                <constraint firstItem="rXT-cW-slX" firstAttribute="top" secondItem="saI-YZ-CF3" secondAttribute="top" constant="7" id="fEe-9z-zBI"/>
                                                <constraint firstAttribute="bottom" secondItem="rXT-cW-slX" secondAttribute="bottom" constant="7" id="qbM-Gi-xfb"/>
                                                <constraint firstItem="rXT-cW-slX" firstAttribute="leading" secondItem="saI-YZ-CF3" secondAttribute="leading" constant="6" id="waY-hX-i6b"/>
                                            </constraints>
                                        </collectionViewCellContentView>
                                        <connections>
                                            <outlet property="btnAdd" destination="Rda-Z3-9ca" id="FN5-I9-8Ey"/>
                                            <outlet property="imgView" destination="myu-Da-Cer" id="8hS-y6-pyd"/>
                                            <outlet property="lblName" destination="Qcv-3I-PzD" id="6wt-0K-pB3"/>
                                            <outlet property="lblPrice" destination="9kB-I7-08r" id="pTM-E0-WuK"/>
                                            <outlet property="lblProductUnit" destination="uHv-nV-TNt" id="hkn-MP-q7y"/>
                                            <outlet property="subCateogryView" destination="rXT-cW-slX" id="d4i-Pf-nEB"/>
                                        </connections>
...
                            <constraint firstItem="Hq2-JL-X8l" firstAttribute="trailing" secondItem="0wS-k0-rKm" secondAttribute="trailing" id="UYF-Td-O9c"/>
                            <constraint firstItem="Hq2-JL-X8l" firstAttribute="trailing" secondItem="ESC-aN-MN4" secondAttribute="trailing" id="Ycr-eg-ovQ"/>
                            <constraint firstItem="ESC-aN-MN4" firstAttribute="leading" secondItem="faB-9M-3wV" secondAttribute="leading" id="o4s-J0-h98"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="notesTbl" destination="0wS-k0-rKm" id="E7P-fd-2tf"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="E7J-5D-0DJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3988.5496183206105" y="647.18309859154931"/>
        </scene>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="glG-4a-POC">
                                <rect key="frame" x="0.0" y="567.33333333333337" width="393" height="284.66666666666663"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="deleteBtn" translatesAutoresizingMaskIntoConstraints="NO" id="jSE-st-KHP">
                                        <rect key="frame" x="164.66666666666666" y="15" width="64" height="64"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="64" id="0Vf-cP-a17"/>
                                            <constraint firstAttribute="height" constant="64" id="LWN-U5-b5D"/>
                                        </constraints>
...
