...
    private func setupTableView() {
        notesTblView?.delegate = self
        notesTblView?.dataSource = self
    }
    
    private func setupIdentifier() {
        notesTblView?.accessibilityIdentifier = "NotesTblVieww"
        txtFldSearch?.accessibilityIdentifier = "txtFldSearch"
    }
    
    /// Binds to ViewModel state changes
    private func bindViewModel() {
        viewModel.$getNotesState
...
